--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,13 @@
 
-
+body {
+  font-family: "Nimbus-sans", sans-serif;
+  background: url("img/5.jpg");;
+}
+.brand {
+  padding: 40px;
+  min-height: 480px;
+  position: relative;
+}
 .container {
   position: absolute;
   top: 50%;
@@ -28,99 +36,14 @@ section#formHolder {
   padding: 50px 0;
 }
 
-
-
-.brand.active {
-  width: 100%;
-}
-.brand::before {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-.brand a.logo {
-  text-decoration: none;
-  line-height: 1em;
-  border-radius: 4px;
-}
-.brand a.logo img {
-  width: 60px;
-}
-.brand .heading {
-  position: absolute;
-  bottom: 30px;
-  text-align: left;
-  width: 80%;
-  transition: all 0.6s;
-}
-.brand .heading.active {
-  top: 120px;
-  left: 100px;
-  text-align: center;
-  transform: translate(0);
-}
-.brand .heading h2 {
-  font-size: 28px;
-  font-weight: 600;
-  text-transform: uppercase;
-  margin-bottom: 0.5em;
-  font-family: "Rajdhani", sans-serif;
-}
-.brand .heading p {
-  font-size: 16px;
-  font-weight: 400;
-  color: #cfd4dd;
-  white-space: 4px;
-  font-family: "Nimbus-sans", sans-serif;
-}
-.brand .success-msg {
-  width: 100%;
-  text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin-top: 60px;
-}
-.brand .success-msg p {
-  font-size: 25px;
-  font-weight: 400;
-  font-family: "Rajdhani", sans-serif;
-}
-.brand .success-msg a {
-  font-family: "Rajdhani", sans-serif;
-  font-weight: 600;
-  font-size: 16px;
-  text-transform: uppercase;
-  padding: 8px 30px;
-  background: #00a2e5;
-  text-decoration: none;
-  color: #fff;
-  border-radius: 4px;
-}
-.brand .success-msg p, .brand .success-msg a {
-  transition: all 0.9s;
-  transform: translateY(20px);
-  opacity: 0;
-}
-.brand .success-msg p.active, .brand .success-msg a.active {
-  transform: translateY(0);
-  opacity: 1;
-}
-
 .form {
   position: relative;
 }
-.form .form-peice {
-  border-radius: 4px;
+.form .form-peice { 
   background: #222c3c;
-  min-height: 480px;
   color: #96a2b6;
+  border-radius: 4px;
+  min-height: 480px;
   padding: 30px 0 60px;
   transition: all 0.9s cubic-bezier(1, -0.375, 0.285, 0.995);
   position: absolute;
@@ -231,6 +154,90 @@ section#formHolder {
 }
 .form form .CTA a.switch:hover {
   color: #ffffff;
+}
+
+
+.brand.active {
+  width: 100%;
+}
+.brand::before {
+  content: "";
+  display: block;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+.brand a.logo {
+  text-decoration: none;
+  line-height: 1em;
+  border-radius: 4px;
+}
+.brand a.logo img {
+  width: 60px;
+}
+.brand .heading {
+  position: absolute;
+  bottom: 30px;
+  text-align: left;
+  width: 80%;
+  transition: all 0.6s;
+}
+.brand .heading.active {
+  top: 120px;
+  left: 100px;
+  text-align: center;
+  transform: translate(0);
+}
+.brand .heading h2 {
+  font-size: 28px;
+  font-weight: 600;
+  text-transform: uppercase;
+  margin-bottom: 0.5em;
+  font-family: "Rajdhani", sans-serif;
+}
+.brand .heading p {
+  font-size: 16px;
+  font-weight: 400;
+  color: #cfd4dd;
+  white-space: 4px;
+  font-family: "Nimbus-sans", sans-serif;
+}
+.brand .success-msg {
+  width: 100%;
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-top: 60px;
+}
+.brand .success-msg p {
+  font-size: 25px;
+  font-weight: 400;
+  font-family: "Rajdhani", sans-serif;
+}
+.brand .success-msg a {
+  font-family: "Rajdhani", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  text-transform: uppercase;
+  padding: 8px 30px;
+  background: #00a2e5;
+  text-decoration: none;
+  color: #fff;
+  border-radius: 4px;
+}
+.brand .success-msg p, .brand .success-msg a {
+  transition: all 0.9s;
+  transform: translateY(20px);
+  opacity: 0;
+}
+.brand .success-msg p.active, .brand .success-msg a.active {
+  transform: translateY(0);
+  opacity: 1;
 }
 
 footer {
